updated pom for build failure and bumped version number