@@ -227,24 +227,12 @@
       <!-- Source Jar Configuration -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>${source.plugin}</version>
-        <executions>
-          <execution>
-            <id>create source jar</id>
-            <phase>package</phase>
-            <goals>
-              <goal>jar-no-fork</goal>
-            </goals>
-            <configuration>
-              <excludeResources>false</excludeResources>
-              <includes>
-                <include>**/*.java</include>
-                <include>**/*.ftl</include>
-              </includes>
-            </configuration>
-          </execution>
-        </executions>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <forkCount>3</forkCount>
+          <reuseForks>true</reuseForks>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+        </configuration>
       </plugin>
 	    <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
